--- a/index.html
+++ b/index.html
@@ -1,49 +1,28 @@
 ---
 layout: default
+menu:
+  - label: Início
+    url: '#hero'
+  - label: Serviços
+    url: '#servicos'
+  - label: Sobre nós
+    url: '#sobre-nos'
+  - label: Contato
+    url: '#contato'
 ---
 
-<header class="site-header" id="topo">
+<section class="section section-hero" id="hero">
   <div class="wrapper">
-    <div class="site-title">
-      <img src="{{ site.baseurl }}/img/logo-mhs.png" alt="{{ site.title }}" />
-    </div>
-
-    <nav class="site-nav">
-      <button
-        class="menu-icon"
-        aria-controls="main-menu"
-        aria-expanded="false"
-        aria-label="Menu"
-      >
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-
-      <div id="main-menu" class="trigger">
-        <a class="page-link" href="#hero">Início</a>
-        <a class="page-link" href="#servicos">Serviços</a>
-        <a class="page-link" href="#sobre-nos">Sobre nós</a>
-        <a class="page-link" href="#porque-escolher">Porque Escolher</a>
-        <a class="page-link" href="#principais-clientes">Principais Clientes</a>
-        <a class="page-link" href="#contato">Contato</a>
-      </div>
-    </nav>
-  </div>
-</header>
-
-<section class="section-hero" id="hero">
-  <div class="wrapper">
-    <h1>MHS AIR GROUP</h1>
-    <p>Especialistas em Ar Condicionado</p>
-    <p>DAIKIN FUJITSU LG MIDEA SAMSUNG</p>
-    <p><a href="#contato" class="btn">Contato</a></p>
+    <h1 class="section-hero__title">MHS AIR GROUP</h1>
+    <p class="section-hero__headline">Especialistas em Ar Condicionado</p>
+    <p class="section-hero__description">DAIKIN FUJITSU LG MIDEA SAMSUNG</p>
+    <p class="section-hero__cta"><a href="#contato" class="btn">Contato</a></p>
   </div>
 </section>
 
-<section class="section-servicos" id="servicos">
+<section class="section section-servicos" id="servicos">
   <div class="wrapper">
-    <h2>Nossos Serviços</h2>
+    <h2>Serviços</h2>
     <ul>
       <li>
         <strong>Instalação Residencial e Comercial</strong><br />Todas as
@@ -69,56 +48,54 @@ layout: default
   </div>
 </section>
 
-<section class="section-sobre-nos" id="sobre-nos">
-  <div class="wrapper">
-    <h2>Propósito</h2>
-    <p>
-      Proporcionar qualidade de vida através da refrigeração, trazendo conforto
-      para todos.
-    </p>
-    <h2>Visão</h2>
-    <p>
-      Ser a empresa mais influente em serviços de ar condicionado no Brasil.
-    </p>
-    <h2>Valores</h2>
-    <ul>
-      <li>Caráter acima de capacitação</li>
-      <li>Crescimento e evolução em conjunto</li>
-      <li>Compromisso e honestidade</li>
-      <li>Qualidade junto à ética</li>
-      <li>Ser bom para nós quando for bom para o cliente</li>
-    </ul>
-  </div>
-</section>
+<section class="section section-sobre-nos" id="sobre-nos">
+  <div class="wrapper horizontal">
+    <div>
+      <h2>Propósito</h2>
+      <p>
+        Proporcionar qualidade de vida através da refrigeração, trazendo
+        conforto para todos.
+      </p>
+      <h2>Visão</h2>
+      <p>
+        Ser a empresa mais influente em serviços de ar condicionado no Brasil.
+      </p>
+      <h2>Valores</h2>
+      <ul>
+        <li>Caráter acima de capacitação</li>
+        <li>Crescimento e evolução em conjunto</li>
+        <li>Compromisso e honestidade</li>
+        <li>Qualidade junto à ética</li>
+        <li>Ser bom para nós quando for bom para o cliente</li>
+      </ul>
+    </div>
 
-<section class="section-porque-escolher" id="porque-escolher">
-  <div class="wrapper">
-    <h2>Por Que Escolher a MHS?</h2>
-    <ul>
-      <li>
-        <strong>Experiência e Expertise</strong><br />Anos de atuação no
-        mercado.
-      </li>
-      <li>
-        <strong>Equipe Qualificada</strong><br />Profissionais treinados e
-        certificados.
-      </li>
-      <li>
-        <strong>Compromisso com a Qualidade</strong><br />Foco em excelência e
-        satisfação do cliente.
-      </li>
-      <li>
-        <strong>Atendimento Personalizado</strong><br />Soluções sob medida para
-        cada necessidade.
-      </li>
-    </ul>
+    <div>
+      <h2>Por Que Escolher a MHS?</h2>
+      <ul>
+        <li>
+          <strong>Experiência e Expertise</strong><br />Anos de atuação no
+          mercado.
+        </li>
+        <li>
+          <strong>Equipe Qualificada</strong><br />Profissionais treinados e
+          certificados.
+        </li>
+        <li>
+          <strong>Compromisso com a Qualidade</strong><br />Foco em excelência e
+          satisfação do cliente.
+        </li>
+        <li>
+          <strong>Atendimento Personalizado</strong><br />Soluções sob medida
+          para cada necessidade.
+        </li>
+      </ul>
+    </div>
   </div>
-</section>
 
-<section class="section-principais-clientes" id="principais-clientes">
   <div class="wrapper">
     <h2>Principais Clientes</h2>
-    <ul>
+    <ul class="horizontal">
       <li>IDS</li>
       <li>JEEP</li>
       <li>FIAT</li>
@@ -129,7 +106,7 @@ layout: default
   </div>
 </section>
 
-<section class="section-contato" id="contato">
+<section class="section section-contato" id="contato">
   <div class="wrapper">
     <h2>Fale conosco</h2>
 
