fixed success page link

--- a/email_com_erro.html
+++ b/email_com_erro.html
@@ -3,3 +3,7 @@ layout: msg
 title: Erro ao enviar
 excerpt: Ocorreu um erro ao tentar enviar os dados. Tente novamente.
 ---
+
+<p>
+  <a href="javascript: history.back();">Voltar</a>
+</p>
