--- a/email_enviado.html
+++ b/email_enviado.html
@@ -3,3 +3,7 @@ layout: msg
 title: Email enviado com sucesso!
 excerpt: Recebemos a sua mensagem. Aguarde nossa resposta. Obrigado.
 ---
+
+<p>
+  <a href="{{ site.baseurl }}/">Ir para a página inicial</a>
+</p>
