--- a/email_incompleto.html
+++ b/email_incompleto.html
@@ -3,3 +3,7 @@ layout: msg
 title: Formulário incompleto
 excerpt: Faltou alguma coisa. Verifique o preenchimento correto de todos os campos obrigatórios.
 ---
+
+<p>
+  <a href="javascript: history.back();">Voltar</a>
+</p>
